--- a/MarcasYSabores/.vscode/launch.json
+++ b/MarcasYSabores/.vscode/launch.json
@@ -2,21 +2,22 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Your own server",
+            "name": "localhost",
             "request": "launch",
             "type": "al",
-            "environmentType": "OnPrem",
-            "server": "http://bcserver",
-            "serverInstance": "BC",
-            "authentication": "UserPassword",
-            "startupObjectId": 22,
-            "startupObjectType": "Page",
+            "environmentType": "Sandbox",
+            "server": "http://localhost:8080/BC260/",
+            "serverInstance": "BC260",
+            "authentication": "Windows",
+            //"startupObjectId": 22,
+            //"startupObjectType": "Page",
             "breakOnError": "All",
-            "launchBrowser": true,
+            //"launchBrowser": true,
             "enableLongRunningSqlStatements": true,
             "enableSqlInformationDebugger": true,
             "tenant": "default",
-            "usePublicURLFromServer": true
+            "usePublicURLFromServer": true,
+           // "schemaUpdateMode": "ForceSync"//probar esta línea para forzar algo si no funciona, NO USAR EN DESARROLLO, BORRA COSAS
         }
     ]
 }
