first tables and pages created

--- a/MarcasYSabores/.vscode/settings.json
+++ b/MarcasYSabores/.vscode/settings.json
@@ -3,7 +3,8 @@
     "al.codeAnalyzers": [
         "${CodeCop}",
         "${UICop}",
-        "${PerTenantExtensionCop}"
+        "${PerTenantExtensionCop}",
+        "${analyzerFolder}BusinessCentral.LinterCop.dll"
     ],
     "al.ruleSetPath": ".codeanalysis/lider.ruleset.json"
 }
