--- a/MarcasYSabores/app.json
+++ b/MarcasYSabores/app.json
@@ -12,8 +12,8 @@
   "logo": "",
   "dependencies": [],
   "screenshots": [],
-  "platform": "1.0.0.0",
-  "application": "1.0.0.0",
+  "platform": "26.0.0.0",
+  "application": "26.0.0.0",
   "idRanges": [
     {
       "from": 50100,
@@ -25,7 +25,7 @@
     "allowDownloadingSource": true,
     "includeSourceInSymbolFile": true
   },
-  "runtime": "15.2",
+  "runtime": "16.0",
   "features": ["TranslationFile"],
-  "suppressWarnings": ["AS0051","AS0052","AS0084"]
+  "target": "Cloud"
 }
