--- a/MarcasYSabores/.vscode/launch.json
+++ b/MarcasYSabores/.vscode/launch.json
@@ -9,8 +9,8 @@
             "server": "http://localhost:8080/BC260/",
             "serverInstance": "BC260",
             "authentication": "Windows",
-            //"startupObjectId": 22,
-            //"startupObjectType": "Page",
+            "startupObjectId": 31,
+            "startupObjectType": "Page",
             "breakOnError": "All",
             //"launchBrowser": true,
             "enableLongRunningSqlStatements": true,
