trying to make master tablix on Report builder

--- a/9PurchaseOrderReport/app.json
+++ b/9PurchaseOrderReport/app.json
@@ -26,6 +26,9 @@
     "includeSourceInSymbolFile": true
   },
   "runtime": "15.2",
-  "features": ["TranslationFile"],
+  "features": [
+    "TranslationFile",
+    "NoImplicitWith"
+  ],
   "target": "Cloud"
 }
